--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://gael-src.github.io/eve-art/",
+	"homepage": "https://gael-src.github.io/simple-react-app/",
 	"name": "simple-react-app",
 	"version": "0.1.0",
 	"private": true,
